# pyKMC

./: .gitignore  CONTRIBUTING.md  HANDOFF_recycle_pool_hang.md  HANDOFF_recycle_reconstruction_findings.md  HANDOFF_recycle_reconstruction_nonviable.md  Notes.md  README.md  TODO.md  general_algorithm.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
develop/: 404.html  active_volumes.html  basins.html  dev_code_formatting.html  dev_engine.html  dev_strategy_pattern.html  developer_guide.html  general_algorithm.html  index.html  objects.inv  parameters.html  parameters_details.html  reference.html  sitemap.xml  symmetries.html  troubleshooting.html  user_guide.html
docs/: 0-pyKMC-workflow.md  1-pyKMC-simple.md  active_volumes.md  basins.md  dev_engine.md  dev_strategy_pattern.md  developer_guide.md  dissolution.md  general_algorithm.md  index.md  installation.md  parameters.md  parameters_details.md  reference.md  symmetries.md  troubleshooting.md  tutorials.md  user_guide.md
examples/: README.md
main/: 404.html  active_volumes.html  basins.html  developer_guide.html  general_algorithm.html  index.html  objects.inv  parameters.html  parameters_details.html  reference.html  sitemap.xml  symmetries.html  troubleshooting.html  user_guide.html
pykmc/: __init__.py  __main__.py  algorithms.py  atom_selector.py  atomic_environment.bck.py  atomic_environment.py  base_engine.py  basin.py  bias.py  catalog.py  config.bck.py  config.py  dissolution.py  engine.py  event.bck.py  kmc.py  (+22 more)
pykmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+434 files in other folders)
