[project]
name = "pykmc"
version = "0.0.1"
authors = [
  { name="Hugo Moison" },
]
description = "test kmc and python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system] 
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/hugomoison/pyKMC"
