[project]
name = "pykmc"
version = "0.0.1"
authors = [
  { name="Hugo Moison" },
]
description = "test kmc and python"
readme = "README.md"
requires-python = "<3.13,>=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["ase>=3.24.0", "executorlib==0.0.8", "lammps>=2024.8.29.1.0", "mpi4py>=4.0.2", "numpy>=2.0.2", "pandas>=2.2.3", "pynauty>=2.8.8.1", "PyYAML>=6.0.2", "scipy>=1.13.1"]



[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",    
    "mdx_include",
    "pymdown-extensions",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]


[build-system] 
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/hugomoison/pyKMC"
